--- a/find-cate-client/src/main/resources/application.yml
+++ b/find-cate-client/src/main/resources/application.yml
@@ -11,3 +11,6 @@ spring:
     charset: UTF-8 #编码格式
     settings:
       number_format: '0.##'   #数字格式化，无小数点
+
+back-end:
+  server: http://localhost:12344
