--- a/find-cate-client/src/main/resources/application.yml
+++ b/find-cate-client/src/main/resources/application.yml
@@ -3,10 +3,10 @@ server:
 spring:
   freemarker:
     request-context-attribute: req  #req访问request
-    suffix: .html  #后缀名
+    suffix: .ftl  #后缀名
     content-type: text/html
     enabled: true
-    cache: false #缓存配置
+    #cache: false #缓存配置
     template-loader-path: classpath:/templates/ #模板加载路径 按需配置
     charset: UTF-8 #编码格式
     settings:
