--- a/find-cate-server/src/main/resources/application.yml
+++ b/find-cate-server/src/main/resources/application.yml
@@ -46,6 +46,6 @@ spring:
     #数据库链接（地址，账号，密码）
     datasource:
       driverClassName: com.mysql.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/j2e8?characterEncoding=utf-8&&useSSL=true
+      url: jdbc:mysql://localhost:3306/food?characterEncoding=utf-8&&useSSL=true
       username: root
       password: 123456
